# agent_attract_customer

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  session_instagram.json
src/: __init__.py  ag.py  agent.py  agents.py  agents_message.py  insta.py  instaa.ipynb  monitor_msg.py  send_email.py  session_instagram.json  tools.py  utils.py
