[project]
name = "agent-attract-customer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "agno>=2.3.2",
    "ddgs>=9.9.2",
    "dotenv>=0.9.9",
    "fastapi>=0.121.0",
    "instagrapi",
    "numpy>=2.3.4",
    "ollama>=0.6.1",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.44",
]

[tool.uv.workspace]
members = []

[tool.uv.sources]
instagrapi = { git = "https://github.com/subzeroid/instagrapi.git" }
